Refactor UI components and localization updates for task management
- Updated modifyTask.fxml to enhance layout and spacing for better user experience.
- Improved button actions and added drag event handlers for task confirmation and deletion.
- Refined table.fxml to streamline table column definitions and improve styling.
- Enhanced English and Chinese localization files with new keys and improved translations for better clarity and consistency.
- Added notifications for various user actions, including task addition, modification, and deletion.
- Ensured all UI elements are properly labeled and accessible in both English and Chinese.

--- a/src/main/resources/lang/ui_en.properties
+++ b/src/main/resources/lang/ui_en.properties
@@ -4,94 +4,127 @@ app.version=1.0.0
 log.langLoaded=Language file loaded successfully
 log.loadingData=Loading data...
 
+notify.confirm=Confirm
+notify.warning=Warning
+notify.error=Error
+notify.info=Info
+notify.invalidChoice=Invalid choice, please try again.
+notify.languageChanged=Language changed to English!
+notify.unchanged=No changes made
+
+## Main menu
 ui.welcome=Welcome to the CLI version of NCKU todo!
-ui.hintTaskCount=You have %d incomplete tasks!\n
+ui.hintTaskCount=You have %d incomplete tasks!
 ui.back=Back to main menu
 ui.choice=Please choose an option: 
 ui.help=Help
 ui.setting=Settings
 ui.exit=Exit
 ui.add=Add Category/Task
-ui.list=List Todo Items
+ui.listTasks=List Todo Tasks
 ui.modify=Modify Category/Task
 ui.delete=Delete Category/Task
-ui.taskName=Task Name
-ui.taskdueDate=Due Date
-ui.taskStatus=Task Status
+ui.pressEnter=Press Enter to continue...
+ui.cancelOperation=Operation Canceled
 
+gui.confirm=Confirm
+gui.delete=Delete
+gui.emptyCategory=No tasks available
+
+# setting
 ui.changeLanguage=Change Language
 ui.pickLanguage=Please select a language: 
 
-ui.addCategory=Add Category
-ui.CategoryName=Category name
-ui.inputCategoryName=Please enter the category name: 
-ui.categoryAdded=Add Category \"%s\" Success!
-ui.categoryExists=Category \"%s\" already exists!
-ui.invalidCategoryName=Invalid category name, please re-enter.
-
-ui.addTask=Add Task
-ui.TaskName=Task Name
-ui.inputTaskName=Please enter the task name: 
-ui.pickCategoryToAdd=Please select the category to add the task to: 
-gui.pickCategoryToAdd=Select the category: 
-ui.inputDueDate=Please enter the task's due date (YYYY-MM-DD, leave blank if none):
-ui.pickDueDate=Please select the task's due date:
-ui.taskAdded=Add Task \"%s\" Success!
-ui.invalidTaskName=Invalid task name, please re-enter.
-ui.invalidDateFormat=Invalid date format, please use YYYY-MM-DD format.
-ui.duplicateNewTask=Failed to add task \"%s\" to category \"%s\"\nDuplicate task.
-ui.confirm=Confirm
-
-ui.due=Due on:
-ui.emptyCategory=<Empty>
-ui.helpContent=This application is a Command-Line Interface (CLI) tool for managing your to-do list.
-ui.helpContent2=It allows you to organize tasks into categories, set due dates, and track their status. 
-ui.helpContent3=Features include adding, listing, modifying tasks and categories, changing the application language, and more.
-ui.credit=By Hank, NCKU at 2025
-
-ui.modifyCategory=Modify Category
-ui.CategoryName=Category Name
-ui.pickCategoryToModify=Please select the category to modify: 
-ui.noCategory=No category in the list, please add a category first!
-ui.inputNewCategoryName=Please enter the new category name: 
-ui.categoryModified=Modify Category \"%s\" to \"%s\" Success!
-ui.categoryExists=Category \"%s\" already exists!
-
-ui.deleteCategory=Delete Category
-ui.pickCategoryToDelete=Please select the category to delete:
-ui.categoryNotEmpty=Category \"%s\" is not empty! Still want to delete it? (y/n):
-ui.confirmDeleteCategory=Are you sure you want to delete this category? (y/n):
-ui.cancelOperation=Cancel Operation
-ui.categoryDeleted=Category \"%s\" deleted successfully!
-
-ui.deleteTask=Delete Task
-ui.pickCategoryOfTaskToDelete=Please select the category of the task to delete:
-ui.pickTaskToDelete=Please select the task to delete:
-ui.taskDeleted=Delete Task \"%s\" Success!
-
-ui.modifyTask=Modify Task
-ui.pickCategoryOfTaskToModify=Please select the category of the task to modify: 
-ui.noTaskInCategory=No task in the selected category, please add a task first!
-ui.pickTaskToModify=Please select the task to modify: 
-ui.modifyingTask=Modifying %s - %s\n
-ui.pickNewCategory=Please select a new category (leave blank if unchanged): 
-ui.inputNewTaskName=Please enter the new task name (leave blank if unchanged): 
-ui.inputNewDueDate=Please enter the new due date (YYYY-MM-DD, leave blank if unchanged, enter -1 to remove date): 
-ui.pickNewStatus=Please select a new status (leave blank if unchanged): 
-ui.taskModified=Modify Task \"%s\" Success!
-ui.duplicateModifyTask=Failed to modify task \"%s\"\nDuplicate task.
-gui.inputNewStatus=Select the new status:
-
-gui.pickNewCategory=Select a new category:
-gui.inputNewTaskName=Enter the new task name:
-gui.inputNewDueDate=Select the new due date (enter -1 to remove date):
-
-ui.languageChanged=Language changed to English!
-
-ui.pressEnter=Press Enter to continue...
-ui.invalidChoice=Invalid choice, please try again.
-
+# property
+gui.categoryName=Category Name
+gui.taskName=Task Name
+gui.taskDueDate=Due Date
+gui.taskStatus=Task Status
 status.TODO=To Do
 status.IN_PROGRESS=In Progress
 status.DONE=Done
 status.DELETED=Deleted
+
+
+# List tasks
+ui.due=Due on:
+ui.emptyCategory=<Empty>
+
+
+# Category
+ui.addCategory=Add Category
+ui.inputCategoryName=Please enter the category name: 
+
+ui.modifyCategory=Modify Category
+ui.pickCategoryToModify=Please select the category to modify: 
+ui.inputNewCategoryName=Please enter the new category name: 
+
+ui.deleteCategory=Delete Category
+ui.pickCategoryToDelete=Please select the category to delete:
+ui.confirmDeleteCategory=This will also delete all tasks in category \"%s\". Are you sure you want to delete it? (y/n):
+ui.confirmDeleteCategory2=Are you sure you want to delete category \"%s\"? (y/n):
+
+gui.pickCategory=Select the category: 
+gui.inputCategoryName=Category name:
+gui.inputColor=Category color: (in development)
+gui.newCategoryName=New category name:
+gui.newColor=New color: (in development)
+
+notify.gui.confirmDeleteCategory=This will also delete all tasks in this category. Are you sure you want to delete it?
+notify.noCategory=No category in the list, please add a category first!
+notify.categoryAdded=Add Category \"%s\" Success!
+notify.categoryModified=Modify Category \"%s\" to \"%s\" Success!
+notify.categoryDeleted=Delete Category \"%s\" Success!
+notify.invalidCategoryName=Invalid category name!
+notify.existedCategory=Category \"%s\" already exists!
+notify.gui.noChooseCategory=Please select a category first!
+
+
+# Task
+ui.addTask=Add Task
+ui.inputTaskName=Please enter the task name: 
+ui.pickCategoryToAdd=Please select the category to add the task to: 
+ui.inputDueDate=Please enter the task's due date (YYYY-MM-DD, leave blank if none):
+
+ui.modifyTask=Modify Task
+ui.pickCategoryOfTaskToModify=Please select the category of the task to modify: 
+ui.pickTaskToModify=Please select the task to modify: 
+ui.modifyingTask=Modifying %s - %s
+ui.pickNewCategory=Please select a new category (leave blank if unchanged): 
+ui.inputNewTaskName=Please enter the new task name (leave blank if unchanged): 
+ui.inputNewDueDate=Please enter the new due date (YYYY-MM-DD, leave blank if unchanged, enter -1 to remove date): 
+ui.pickNewStatus=Please select a new status (leave blank if unchanged): 
+
+ui.deleteTask=Delete Task
+ui.pickCategoryOfTaskToDelete=Please select the category of the task to delete:
+ui.pickTaskToDelete=Please select the task to delete:
+ui.confirmDeleteTask=Are you sure you want to delete task \"%s\"? (y/n):
+
+gui.categoryOfTask=Category of the task: 
+gui.pickTask=Select the task:
+gui.inputTaskName=Task name:
+gui.pickDueDate=Task's due date:
+gui.newCategoryOfTask=New category of the task:
+gui.newTaskName=New task name:
+gui.newDueDate=New due date:
+gui.newStatus=New status:
+
+notify.gui.confirmDeleteTask=Are you sure you want to delete task \"%s\"?
+notify.noTaskInCategory=No task in the selected category, please add a task first!
+notify.taskAdded=Add Task \"%s\" Success!
+notify.taskModified=Modify Task \"%s\" Success!
+notify.taskDeleted=Delete Task \"%s\" Success!
+notify.invalidTaskName=Invalid task name!
+notify.invalidDateFormat=Invalid date format, please use YYYY-MM-DD format.
+notify.duplicateNewTask=Failed to add task \"%s\" to category \"%s\"\nDuplicate task.
+notify.duplicateModifiedTask=Failed to modify task \"%s\"\nDuplicate task.
+notify.gui.existedTask=Task \"%s\" already exists in category \"%s\"!
+notify.gui.noChooseTask=Please select a task first!
+notify.gui.noChooseNewCategory=Please select a new category!
+
+
+# Help
+ui.helpContent=This application is a Command-Line Interface (CLI) tool for managing your to-do list.
+ui.helpContent2=It allows you to organize tasks into categories, set due dates, and track their status. 
+ui.helpContent3=Features include adding, listing, modifying tasks and categories, changing the application language, and more.
+ui.credit=By Hank, NCKU at 2025
