--- a/src/main/resources/lang/ui_zh_CN.properties
+++ b/src/main/resources/lang/ui_zh_CN.properties
@@ -4,95 +4,128 @@ app.version=1.0.0
 log.langLoaded=成功载入语言档案
 log.loadingData=载入资料中...
 
-ui.welcome=欢迎使用 NCKU todo 的命令列版本！
-ui.hintTaskCount=你有 %d 个未完成的任务！\n
-ui.back=回到主选单
-ui.choice=请选择一个选项：
+
+notify.confirm=确认
+notify.warning=警告
+notify.error=错误
+notify.info=提示
+notify.invalidChoice=无效选择，请重试。
+notify.languageChanged=语言已更改为简体中文！
+notify.unchanged=无变更
+
+## Main menu
+ui.welcome=欢迎使用 NCKU todo 的命令行版本！
+ui.hintTaskCount=你有 %d 个未完成的任务！
+ui.back=回到主菜单
+ui.choice=请选择一个选项: 
 ui.help=帮助
-ui.setting=设定
-ui.exit=离开
-ui.add=新增类别/任务
-ui.list=列出待办事项
+ui.setting=设置
+ui.exit=退出
+ui.add=添加类别/任务
+ui.listTasks=列出待办任务
 ui.modify=修改类别/任务
 ui.delete=删除类别/任务
-ui.taskName=任务名称
-ui.taskdueDate=任务期限
-ui.taskStatus=任务状态
+ui.pressEnter=按回车继续...
+ui.cancelOperation=操作已取消
 
+gui.confirm=确认
+gui.delete=删除
+gui.emptyCategory=无任务
+
+# setting
 ui.changeLanguage=更改语言
-ui.pickLanguage=请选择语言：
+ui.pickLanguage=请选择语言: 
 
-ui.addCategory=新增类别
-ui.CategoryName=类别名称
-ui.inputCategoryName=请输入类别名称：
-ui.categoryAdded=成功新增类别「%s」！
-ui.categoryExists=类别「%s」已存在！
-ui.invalidCategoryName=无效的类别名称，请重新输入。
-
-ui.addTask=新增任务
-ui.TaskName=任务名称
-ui.inputTaskName=请输入任务名称：
-ui.pickCategoryToAdd=请选择要新增任务到哪个类别：
-gui.pickCategoryToAdd=请选择要新增任务到哪个类别：
-ui.inputDueDate=请输入任务的截止日期 (YYYY-MM-DD, 若无则留空)：
-ui.pickDueDate=请选择任务的截止日期：
-ui.taskAdded=成功新增任务「%s」！
-ui.invalidTaskName=无效的任务名称，请重新输入。
-ui.invalidDateFormat=无效的日期格式，请使用 YYYY-MM-DD 格式。
-ui.duplicateNewTask=新增任务「%s」到类别「%s」失败\n重复的任务。
-ui.confirm=确认
-
-ui.due=截止于:
-ui.emptyCategory=<空白>
-ui.helpContent=这是一个命令行界面的待办事项管理工具。
-ui.helpContent2=它允许你将任务组织到类别中，设置截止日期，并跟踪它们的状态。
-ui.helpContent3=功能包括添加、列出、修改任务和类别，更改应用程序语言等。
-ui.credit=By Hank, NCKU at 2025
-
-ui.modifyCategory=修改类别
-ui.CategoryName=类别名称
-ui.pickCategoryToModify=请选择要修改的类别：
-ui.noCategory=类别列表为空，请先新增类别!
-ui.inputNewCategoryName=请输入新的类别名称：
-ui.categoryModified=成功修改类别「%s」为「%s」！
-ui.categoryExists=类别「%s」已存在！
-
-
-ui.deleteCategory=删除类别
-ui.pickCategoryToDelete=请选择要删除的类别：
-ui.categoryNotEmpty=类别「%s」不为空！仍然要删除它吗？ (y/n):
-ui.confirmDeleteCategory=您确定要删除此类别吗？ (y/n):
-ui.cancelOperation=取消操作
-ui.categoryDeleted=类别「%s」删除成功！
-
-ui.deleteTask=删除任务
-ui.pickCategoryOfTaskToDelete=请选择要删除任务的类别：
-ui.pickTaskToDelete=请选择要删除的任务：
-ui.taskDeleted=任务「%s」删除成功！
-
-ui.modifyTask=修改任务
-ui.pickCategoryOfTaskToModify=请选择要修改任务的类别：
-ui.noTaskInCategory=类别中没有任务，请先新增任务!
-ui.pickTaskToModify=请选择要修改的任务：
-ui.modifyingTask=正在修改 %s - %s\n
-ui.pickNewCategory=请选择新的类别 (未变更则留空)：
-ui.inputNewTaskName=请输入新的任务名称 (未变更则留空)：
-ui.inputNewDueDate=请输入新的截止日期 (YYYY-MM-DD, 未变更则留空, 移除日期请输入-1)：
-ui.pickNewStatus=请选择新的状态 (未变更则留空)：
-ui.taskModified=成功修改任务「%s」！
-ui.duplicateModifyTask=修改任务「%s」失败\n重复的任务。
-gui.inputNewStatus=请选择新的状态：
-
-gui.pickNewCategory=请选择新的类别：
-gui.inputNewTaskName=请输入新的任务名称：
-gui.inputNewDueDate=请选择新的截止日期 (移除日期请选择-1)：
-
-ui.languageChanged=语言已更改为 简体中文!
-
-ui.pressEnter=按下 Enter 键继续...
-ui.invalidChoice=无效的选择，请重试。
-
+# property
+gui.categoryName=类别名称
+gui.taskName=任务名称
+gui.taskDueDate=截止日期
+gui.taskStatus=任务状态
 status.TODO=待办
 status.IN_PROGRESS=进行中
 status.DONE=已完成
 status.DELETED=已删除
+
+
+# List tasks
+ui.due=期限:
+ui.emptyCategory=<空>
+
+
+# Category
+ui.addCategory=新增类别
+ui.inputCategoryName=请输人类别名称: 
+
+ui.modifyCategory=修改类别
+ui.pickCategoryToModify=请选取要修改的类别: 
+ui.inputNewCategoryName=请输人新的类别名称: 
+
+ui.deleteCategory=删除类别
+ui.pickCategoryToDelete=请选取要删除的类别: 
+ui.confirmDeleteCategory=这将同时删除该类别下的所有任务。你确定要删除类别 \"%s\" 吗？ (y/n): 
+ui.confirmDeleteCategory2=你确定要删除类别 \"%s\" 吗？ (y/n): 
+
+gui.pickCategory=选择类别: 
+gui.inputCategoryName=类别名称: 
+gui.inputColor=类别颜色: (开发中)
+gui.newCategoryName=新的类别名称: 
+gui.newColor=新的类别颜色: (开发中)
+
+notify.gui.confirmDeleteCategory=这将同时删除该类别下的所有任务。你确定要删除它吗？
+notify.noCategory=类别列表为空，请先添加类别！
+notify.categoryAdded=添加类别 \"%s\" 成功！
+notify.categoryModified=修改类别 \"%s\" 为 \"%s\" 成功！
+notify.categoryDeleted=删除类别 \"%s\" 成功！
+notify.invalidCategoryName=无效的类别名称！
+notify.existedCategory=类别 \"%s\" 已存在！
+notify.gui.noChooseCategory=请先选择一个类别！
+
+
+# Task
+ui.addTask=新增任务
+ui.inputTaskName=请输人任务名称: 
+ui.pickCategoryToAdd=请选取要添加任务的类别: 
+ui.inputDueDate=请输人任务的截止日期 (YYYY-MM-DD, 若无则留空):
+
+ui.modifyTask=修改任务
+ui.pickCategoryOfTaskToModify=请选取要修改任务的类别:
+ui.pickTaskToModify=请选取要修改的任务: 
+ui.modifyingTask=正在修改 %s - %s
+ui.pickNewCategory=请选取新的类别 (若不变则留空):
+ui.inputNewTaskName=请输人新的任务名称 (若不变则留空):
+ui.inputNewDueDate=请输人新的截止日期 (YYYY-MM-DD, 若不变则留空, 输入 -1 删除日期):
+ui.pickNewStatus=请选取新的状态 (若不变则留空): 
+
+ui.deleteTask=删除任务
+ui.pickCategoryOfTaskToDelete=请选取要删除任务的类别:
+ui.pickTaskToDelete=请选取要删除的任务:
+ui.confirmDeleteTask=你确定要删除任务 \"%s\"? (y/n):
+
+gui.categoryOfTask=任务类别:
+gui.pickTask=选择任务:
+gui.inputTaskName=任务名称:
+gui.pickDueDate=任务截止日期:
+gui.newCategoryOfTask=新的任务类别:
+gui.newTaskName=新的任务名称:
+gui.newDueDate=新的截止日期:
+gui.newStatus=新的状态:
+
+notify.gui.confirmDeleteTask=你确定要删除任务 \"%s\" 吗？ (y/n): 
+notify.noTaskInCategory=类别中没有任务，请先添加任务！
+notify.taskAdded=添加任务 \"%s\" 成功！
+notify.taskModified=修改任务 \"%s\" 成功！
+notify.taskDeleted=删除任务 \"%s\" 成功！
+notify.invalidTaskName=无效的任务名称，请重新输入。
+notify.invalidDateFormat=无效的日期格式，请使用 YYYY-MM-DD 格式。
+notify.duplicateNewTask=添加任务 \"%s\" 到类别 \"%s\" 失败\n重复的任务。
+notify.duplicateModifiedTask=修改任务 \"%s\" 失败\n重复的任务。
+notify.gui.existedTask=任务 \"%s\" 已存在于类别 \"%s\" 中！
+notify.gui.noChooseTask=请先选择一个任务！
+notify.gui.noChooseNewCategory=请先选择一个新的类别！
+
+
+# Help
+ui.helpContent=这是一个命令行界面的待办事项管理工具。
+ui.helpContent2=它允许你将任务组织到类别中，设置截止日期，并跟踪它们的状态。
+ui.helpContent3=功能包括添加、列出、修改任务和类别，更改应用程序语言等。
+ui.credit=By Hank, NCKU at 2025
