--- a/src/main/resources/lang/ui_zh_TW.properties
+++ b/src/main/resources/lang/ui_zh_TW.properties
@@ -4,95 +4,127 @@ app.version=1.0.0
 log.langLoaded=成功載入語言檔案
 log.loadingData=載入資料中...
 
+notify.confirm=確認
+notify.warning=警告
+notify.error=錯誤
+notify.info=提示
+notify.invalidChoice=無效選擇，請重試。
+notify.languageChanged=語言已更改為簡體中文！
+notify.unchanged=無變更
+
+## Main menu
 ui.welcome=歡迎使用 NCKU todo 的命令列版本！
-ui.hintTaskCount=你有 %d 個未完成的任務！\n
+ui.hintTaskCount=你有 %d 個未完成的任務！
 ui.back=回到主選單
-ui.choice=請選擇一個選項：
+ui.choice=請選擇一個選項: 
 ui.help=幫助
 ui.setting=設定
-ui.exit=離開
+ui.exit=退出
 ui.add=新增類別/任務
-ui.list=列出待辦事項
+ui.listTasks=列出待辦任務
 ui.modify=修改類別/任務
 ui.delete=刪除類別/任務
-ui.taskName=任務名稱
-ui.taskdueDate=任務期限
-ui.taskStatus=任務狀態
+ui.pressEnter=按Enter繼續...
+ui.cancelOperation=操作已取消
 
+gui.confirm=確認
+gui.delete=刪除
+gui.emptyCategory=無任務
+
+# setting
 ui.changeLanguage=更改語言
-ui.pickLanguage=請選擇語言：
+ui.pickLanguage=請選擇語言: 
 
-ui.addCategory=新增類別
-ui.CategoryName=類別名稱
-ui.inputCategoryName=請輸入類別名稱：
-ui.categoryAdded=成功新增類別「%s」！
-ui.categoryExists=類別「%s」已存在！
-ui.invalidCategoryName=無效的類別名稱，請重新輸入。
-
-ui.addTask=新增任務
-ui.TaskName=任務名稱
-ui.inputTaskName=請輸入任務名稱：
-ui.pickCategoryToAdd=請選擇要新增任務到哪個類別：
-gui.pickCategoryToAdd=請選擇要新增任務到哪個類別：
-ui.inputDueDate=請輸入任務的截止日期 (YYYY-MM-DD, 若無則留空)：
-ui.pickDueDate=請選擇任務的截止日期：
-ui.taskAdded=成功新增任務「%s」！
-ui.invalidTaskName=無效的任務名稱，請重新輸入。
-ui.invalidDateFormat=無效的日期格式，請使用 YYYY-MM-DD 格式。
-ui.duplicateNewTask=新增任務「%s」到類別「%s」失敗\n重複的任務。
-ui.confirm=確認
-
-ui.due=截止於: 
-ui.emptyCategory=<空白>
-ui.helpContent=這是一個命令行界面的待辦事項管理工具。
-ui.helpContent2=它允許你將任務組織到類別中，設置截止日期，並跟蹤它們的狀態。
-ui.helpContent3=功能包括添加、列出、修改任務和類別，更改應用程序語言等。
-ui.credit=By Hank, NCKU at 2025
-
-ui.modifyCategory=修改類別
-ui.CategoryName=類別名稱
-ui.pickCategoryToModify=請選擇要修改的類別：
-ui.noCategory=類別列表為空，請先新增類別!
-ui.inputNewCategoryName=請輸入新的類別名稱：
-ui.categoryModified=成功修改類別「%s」為「%s」！
-ui.categoryExists=類別「%s」已存在！
-
-
-ui.deleteCategory=刪除類別
-ui.pickCategoryToDelete=請選擇要刪除的類別：
-ui.categoryNotEmpty=類別「%s」不為空！仍然要刪除它嗎？ (y/n):
-ui.confirmDeleteCategory=您確定要刪除此類別嗎？ (y/n):
-ui.cancelOperation=取消操作
-ui.categoryDeleted=類別「%s」刪除成功！
-
-ui.deleteTask=刪除任務
-ui.pickCategoryOfTaskToDelete=請選擇要刪除任務的類別：
-ui.pickTaskToDelete=請選擇要刪除的任務：
-ui.taskDeleted=任務「%s」刪除成功！
-
-ui.modifyTask=修改任務
-ui.pickCategoryOfTaskToModify=請選擇要修改任務的類別：
-ui.noTaskInCategory=類別中沒有任務，請先新增任務!
-ui.pickTaskToModify=請選擇要修改的任務：
-ui.modifyingTask=正在修改 %s - %s\n
-ui.pickNewCategory=請選擇新的類別 (未變更則留空)：
-ui.inputNewTaskName=請輸入新的任務名稱 (未變更則留空)：
-ui.inputNewDueDate=請輸入新的截止日期 (YYYY-MM-DD, 未變更則留空, 移除日期請輸入-1)：
-ui.pickNewStatus=請選擇新的狀態 (未變更則留空)：
-ui.taskModified=成功修改任務「%s」！
-ui.duplicateModifyTask=修改任務「%s」失敗\n重複的任務。
-gui.inputNewStatus=請選擇新的狀態：
-
-gui.pickNewCategory=請選擇新的類別：
-gui.inputNewTaskName=請輸入新的任務名稱：
-gui.inputNewDueDate=請選擇新的截止日期 (移除日期請選擇-1)：
-
-ui.languageChanged=語言已更改為 繁體中文!
-
-ui.pressEnter=按下 Enter 鍵繼續...
-ui.invalidChoice=無效的選擇，請重試。
-
+# property
+gui.categoryName=類別名稱
+gui.taskName=任務名稱
+gui.taskDueDate=截止日期
+gui.taskStatus=任務狀態
 status.TODO=待辦
 status.IN_PROGRESS=進行中
 status.DONE=已完成
 status.DELETED=已刪除
+
+
+# List tasks
+ui.due=期限:
+ui.emptyCategory=<空>
+
+
+# Category
+ui.addCategory=新增類別
+ui.inputCategoryName=請輸人類別名稱: 
+
+ui.modifyCategory=修改類別
+ui.pickCategoryToModify=請選取要修改的類別: 
+ui.inputNewCategoryName=請輸人新的類別名稱: 
+
+ui.deleteCategory=刪除類別
+ui.pickCategoryToDelete=請選取要刪除的類別: 
+ui.confirmDeleteCategory=這將同時刪除該類別下的所有任務。你確定要刪除類別 \"%s\" 嗎？ (y/n): 
+ui.confirmDeleteCategory2=你確定要刪除類別 \"%s\" 嗎？ (y/n): 
+
+gui.pickCategory=選擇類別: 
+gui.inputCategoryName=類別名稱: 
+gui.inputColor=類別顏色: (開發中)
+gui.newCategoryName=新的類別名稱: 
+gui.newColor=新的類別顏色: (開發中)
+
+notify.gui.confirmDeleteCategory=這將同時刪除該類別下的所有任務。你確定要刪除它嗎？
+notify.noCategory=類別列表為空，請先新增類別！
+notify.categoryAdded=新增類別 \"%s\" 成功！
+notify.categoryModified=修改類別 \"%s\" 為 \"%s\" 成功！
+notify.categoryDeleted=刪除類別 \"%s\" 成功！
+notify.invalidCategoryName=無效的類別名稱！
+notify.existedCategory=類別 \"%s\" 已存在！
+notify.gui.noChooseCategory=請先選擇一個類別！
+
+
+# Task
+ui.addTask=新增任務
+ui.inputTaskName=請輸人任務名稱: 
+ui.pickCategoryToAdd=請選取要新增任務的類別: 
+ui.inputDueDate=請輸人任務的截止日期 (YYYY-MM-DD, 若無則留空):
+
+ui.modifyTask=修改任務
+ui.pickCategoryOfTaskToModify=請選取要修改任務的類別:
+ui.pickTaskToModify=請選取要修改的任務: 
+ui.modifyingTask=正在修改 %s - %s
+ui.pickNewCategory=請選取新的類別 (若不變則留空):
+ui.inputNewTaskName=請輸人新的任務名稱 (若不變則留空):
+ui.inputNewDueDate=請輸人新的截止日期 (YYYY-MM-DD, 若不變則留空, 輸入 -1 刪除日期):
+ui.pickNewStatus=請選取新的狀態 (若不變則留空): 
+
+ui.deleteTask=刪除任務
+ui.pickCategoryOfTaskToDelete=請選取要刪除任務的類別:
+ui.pickTaskToDelete=請選取要刪除的任務:
+ui.confirmDeleteTask=你確定要刪除任務 \"%s\"? (y/n):
+
+gui.categoryOfTask=任務類別:
+gui.pickTask=選擇任務:
+gui.inputTaskName=任務名稱:
+gui.pickDueDate=任務截止日期:
+gui.newCategoryOfTask=新的任務類別:
+gui.newTaskName=新的任務名稱:
+gui.newDueDate=新的截止日期:
+gui.newStatus=新的狀態:
+
+notify.gui.confirmDeleteTask=你確定要刪除任務 \"%s\" 嗎？ (y/n): 
+notify.noTaskInCategory=類別中沒有任務，請先新增任務！
+notify.taskAdded=新增任務 \"%s\" 成功！
+notify.taskModified=修改任務 \"%s\" 成功！
+notify.taskDeleted=刪除任務 \"%s\" 成功！
+notify.invalidTaskName=無效的任務名稱，請重新輸入。
+notify.invalidDateFormat=無效的日期格式，請使用 YYYY-MM-DD 格式。
+notify.duplicateNewTask=新增任務 \"%s\" 到類別 \"%s\" 失敗\n重複的任務。
+notify.duplicateModifiedTask=修改任務 \"%s\" 失敗\n重複的任務。
+notify.gui.existedTask=任務 \"%s\" 已存在於類別 \"%s\" 中！
+notify.gui.noChooseTask=請先選擇一個任務！
+notify.gui.noChooseNewCategory=請先選擇一個新的類別！
+
+
+# Help
+ui.helpContent=這是一個命令行界面的待辦事項管理工具。
+ui.helpContent2=它允許你將任務組織到類別中，設置截止日期，並跟蹤它們的狀態。
+ui.helpContent3=功能包括添加、列出、修改任務和類別，更改應用程序語言等。
+ui.credit=By Hank, NCKU at 2025
