修復更新任務截止日期及狀態時的bug，優化任務刪除確認提示語

--- a/src/main/resources/lang/ui_zh_CN.properties
+++ b/src/main/resources/lang/ui_zh_CN.properties
@@ -110,7 +110,7 @@ gui.newTaskName=新的任务名称:
 gui.newDueDate=新的截止日期:
 gui.newStatus=新的状态:
 
-notify.gui.confirmDeleteTask=你确定要删除任务 \"%s\" 吗？ (y/n): 
+notify.gui.confirmDeleteTask=你确定要删除任务 \"%s\" 吗？: 
 notify.noTaskInCategory=类别中没有任务，请先添加任务！
 notify.taskAdded=添加任务 \"%s\" 成功！
 notify.taskModified=修改任务 \"%s\" 成功！
