--- a/src/main/resources/lang/ui_zh_TW.properties
+++ b/src/main/resources/lang/ui_zh_TW.properties
@@ -109,7 +109,7 @@ gui.newTaskName=新的任務名稱:
 gui.newDueDate=新的截止日期:
 gui.newStatus=新的狀態:
 
-notify.gui.confirmDeleteTask=你確定要刪除任務 \"%s\" 嗎？ (y/n): 
+notify.gui.confirmDeleteTask=你確定要刪除任務 \"%s\" 嗎？: 
 notify.noTaskInCategory=類別中沒有任務，請先新增任務！
 notify.taskAdded=新增任務 \"%s\" 成功！
 notify.taskModified=修改任務 \"%s\" 成功！
